--- a/index.html
+++ b/index.html
@@ -5,7 +5,30 @@
      crossorigin="anonymous"></script>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>GymPlan - Your Personalized Workout Generator</title>
+
+    <!-- Primary SEO Meta Tags -->
+    <title>GymPlan.fit | AI-Powered Custom Workout Plan Generator</title>
+    <meta name="description" content="Stop guessing in the gym. Get a science-backed, personalized workout plan in seconds with GymPlan.fit. Tailored to your goals, schedule, and equipment.">
+    <meta name="keywords" content="AI workout planner, custom gym plan, personalized fitness plan, workout generator, strength training, fat loss, muscle gain, gym routine, fitness app">
+    <link rel="canonical" href="https://gymplan.fit" />
+
+    <!-- Open Graph / Facebook Meta Tags -->
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://gymplan.fit/">
+    <meta property="og:title" content="GymPlan.fit | AI-Powered Custom Workout Plan Generator">
+    <meta property="og:description" content="Generate a science-backed, personalized workout plan in seconds. Tailored to your goals, schedule, and equipment.">
+    <meta property="og:image" content="https://placehold.co/1200x630/0a0a0a/ffffff?text=GymPlan.fit">
+
+    <!-- Twitter Meta Tags -->
+    <meta property="twitter:card" content="summary_large_image">
+    <meta property="twitter:url" content="https://gymplan.fit/">
+    <meta property="twitter:title" content="GymPlan.fit | AI-Powered Custom Workout Plan Generator">
+    <meta property="twitter:description" content="Generate a science-backed, personalized workout plan in seconds. Tailored to your goals, schedule, and equipment.">
+    <meta property="twitter:image" content="https://placehold.co/1200x630/0a0a0a/ffffff?text=GymPlan.fit">
+
+    <!-- Favicon -->
+    <link rel="icon" href="https://placehold.co/32x32/3b82f6/ffffff?text=G">
+
     <script src="https://cdn.tailwindcss.com"></script>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700;900&display=swap" rel="stylesheet">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.5.1/jspdf.umd.min.js"></script>
