--- a/index.html
+++ b/index.html
@@ -1,8 +1,6 @@
 <!DOCTYPE html>
-<html lang="en" class="scroll-smooth">
+<html lang="en">
 <head>
-    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-7556184952019119"
-     crossorigin="anonymous"></script>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
@@ -34,6 +32,9 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.5.1/jspdf.umd.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/html2canvas/1.4.1/html2canvas.min.js"></script>
     <style>
+        html {
+            scroll-behavior: smooth; /* Keep this as a fallback */
+        }
         body {
             font-family: 'Inter', sans-serif;
             background-color: #0a0a0a;
@@ -118,7 +119,7 @@
     <header class="absolute top-0 left-0 right-0 z-10 p-4">
         <div class="container mx-auto flex justify-between items-center">
             <h1 class="text-2xl font-bold text-white">Gym<span class="text-blue-500">Plan</span></h1>
-            <a href="#plan-generator" class="hidden md:inline-block px-6 py-2 font-semibold text-white rounded-lg btn-primary">Build Your Plan</a>
+            <a href="#plan-generator" onclick="smoothScroll(event)" class="hidden md:inline-block px-6 py-2 font-semibold text-white rounded-lg btn-primary">Build Your Plan</a>
         </div>
     </header>
 
@@ -127,8 +128,9 @@
         <section id="hero" class="hero-bg min-h-screen flex items-center justify-center text-center p-4">
             <div class="max-w-3xl">
                 <h2 class="text-4xl md:text-6xl font-black text-white leading-tight mb-4">Stop Guessing. Start Training.</h2>
-                <p class="text-lg md:text-xl text-gray-300 mb-8">Get a science-backed, personalized workout plan in seconds. Tailored to your goals, schedule, and equipment.</p>
-                <a href="#plan-generator" class="px-10 py-4 text-lg font-bold text-white rounded-lg btn-primary">Build Your Plan Now</a>
+                <p class="text-lg md:text-xl text-gray-300 mb-6">Get a science-backed, personalized workout plan in seconds. Tailored to your goals, schedule, and equipment.</p>
+                <p class="text-md md:text-lg text-blue-400 font-semibold tracking-wider mb-8">No Fluff. Just Your Plan.</p>
+                <a href="#plan-generator" onclick="smoothScroll(event)" class="px-10 py-4 text-lg font-bold text-white rounded-lg btn-primary">Build Your Plan Now</a>
             </div>
         </section>
 
@@ -354,6 +356,27 @@
         });
 
         // --- Navigation ---
+        function smoothScroll(event) {
+            event.preventDefault();
+            const targetId = event.currentTarget.getAttribute("href");
+            const targetPosition = document.querySelector(targetId).offsetTop;
+            const startPosition = window.pageYOffset;
+            const distance = targetPosition - startPosition;
+            const duration = 750; // milliseconds
+            let start = null;
+
+            window.requestAnimationFrame(step);
+
+            function step(timestamp) {
+                if (!start) start = timestamp;
+                const progress = timestamp - start;
+                // Easing function
+                const ease = progress / duration < 0.5 ? 2 * (progress / duration) * (progress / duration) : -1 + (4 - 2 * (progress / duration)) * (progress / duration);
+                window.scrollTo(0, startPosition + distance * ease);
+                if (progress < duration) window.requestAnimationFrame(step);
+            }
+        }
+
         function nextStep(step) {
             if (validateStep(currentStep)) {
                 document.getElementById(`step-${currentStep}`).classList.remove('active');
