--- a/index.html
+++ b/index.html
@@ -514,7 +514,8 @@ Return a single valid JSON object like this:
 ✅ LOGIC RULES:
 1.  **Workout Plan:** For each exercise, you MUST include "name", "sets", "reps", "rest_seconds", "notes", a "youtube_search_query", and a detailed "instructions" array with at least 3 steps. Match the training style and goal with appropriate exercises. Prioritize compound lifts. Only use available "equipment". Respect injury "notes".
 2.  **Nutrition logic:** Use **Mifflin-St Jeor formula** as a base for daily calories. Set macros as: **Protein**: 1.8–2.2g/kg for fat loss, 2–2.5g/kg for muscle gain; **Fats**: 25–30% total calories; **Carbs**: Remaining cals.
-3.  Return **only valid JSON**, no explanations, markdown, or commentary.
+3.  **Rationale:** The "adjustments" array in the summary should serve as the rationale, explaining how the plan was tailored to the user's specific notes and limitations. If there are no notes, this can be a more general statement about the plan's design.
+4.  Return **only valid JSON**, no explanations, markdown, or commentary.
 
 -------------------
 
@@ -594,7 +595,7 @@ Return a single valid JSON object like this:
             planDetailsContainer.innerHTML = '';
             nutritionSection.innerHTML = '';
 
-            if (summary && summary.adjustments) {
+            if (summary && summary.adjustments && summary.adjustments.length > 0) {
                 planDetailsContainer.innerHTML += `<div class="col-span-full mb-8 bg-blue-900/50 border border-blue-500 rounded-xl p-6"><h3 class="text-2xl font-bold text-white mb-3">Why This Workout?</h3><p class="text-gray-300">${summary.adjustments.join('. ')}</p></div>`;
             }
 
@@ -616,7 +617,29 @@ Return a single valid JSON object like this:
             if (meals && meals.macros) {
                 const macros = meals.macros;
                 nutritionSection.innerHTML = `
-                    <div class="nutrition-card mt-12"><h3 class="text-3xl font-bold text-center text-white mb-6">AI Nutrition Guidance</h3><div class="grid grid-cols-1 sm:grid-cols-3 gap-6 text-center"><div class="bg-gray-800 p-6 rounded-xl"><p class="text-lg text-gray-400">Calories</p><p class="text-4xl font-bold text-blue-400">${macros.daily_calories || meals.daily_calories} kcal</p></div><div class="bg-gray-800 p-6 rounded-xl"><p class="text-lg text-gray-400">Protein</p><p class="text-4xl font-bold text-blue-400">${macros.protein_g}g</p></div><div class="bg-gray-800 p-6 rounded-xl"><p class="text-lg text-gray-400">Fats</p><p class="text-4xl font-bold text-blue-400">${macros.fats_g}g</p></div><div class="bg-gray-800 p-6 rounded-xl sm:col-span-3"><p class="text-lg text-gray-400">Carbs</p><p class="text-4xl font-bold text-blue-400">${macros.carbs_g}g</p></div></div></div>`;
+                    <div class="nutrition-card mt-12">
+                        <h3 class="text-3xl font-bold text-center text-white mb-6">AI Nutrition Guidance</h3>
+                        <div class="grid grid-cols-1 gap-6 text-center">
+                            <div class="bg-gray-800 p-6 rounded-xl">
+                                <p class="text-lg text-gray-400">Calories</p>
+                                <p class="text-4xl font-bold text-blue-400">${macros.daily_calories || meals.daily_calories} kcal</p>
+                            </div>
+                            <div class="grid grid-cols-1 sm:grid-cols-3 gap-6">
+                                <div class="bg-gray-800 p-6 rounded-xl">
+                                    <p class="text-lg text-gray-400">Protein</p>
+                                    <p class="text-4xl font-bold text-blue-400">${macros.protein_g}g</p>
+                                </div>
+                                <div class="bg-gray-800 p-6 rounded-xl">
+                                    <p class="text-lg text-gray-400">Carbs</p>
+                                    <p class="text-4xl font-bold text-blue-400">${macros.carbs_g}g</p>
+                                </div>
+                                <div class="bg-gray-800 p-6 rounded-xl">
+                                    <p class="text-lg text-gray-400">Fats</p>
+                                    <p class="text-4xl font-bold text-blue-400">${macros.fats_g}g</p>
+                                </div>
+                            </div>
+                        </div>
+                    </div>`;
             }
         }
         
