--- a/index.html
+++ b/index.html
@@ -516,36 +516,104 @@
             manualSmoothScroll(planOutputSection);
 
             try {
-                const prompt = `
-You are a certified strength and conditioning coach, clinical exercise physiologist, and precision nutrition expert. Your job is to return a fully customized **weekly training and meal plan**, built around the user's input. The response must be **strictly formatted** as a valid JSON object. No markdown, no text, no headers — only JSON.
+              const prompt = `
+You are a certified strength and conditioning coach, clinical exercise physiologist, and precision nutrition expert.
+
+Your job is to return a fully customized **weekly training and nutrition plan**, based on the user's goal, schedule, equipment, and physical profile.
+
+The output must be **strictly valid JSON** — no markdown, headers, or explanation. Return only one JSON object.
 
 -------------------
 ✅ JSON STRUCTURE (Strictly Follow):
 {
-  "plan": [ { "day": "Day 1", "focus": "Pull (Back, Biceps)", "exercises": [ { "name": "Dumbbell Bent-Over Row", "sets": 3, "reps": 10, "rest_seconds": 60, "notes": "Use moderate weight. Avoid jerking motion.", "youtube_search_query": "how to do dumbbell bent over row", "instructions": ["Hinge at your hips, keeping your back straight.", "Pull the dumbbells towards your lower chest.", "Squeeze your back muscles at the top."] } ], "cardio": { "type": "MISS – Incline Walk", "duration_minutes": 30, "intensity": "Moderate (RPE 6/10)", "timing": "Post-weight training", "notes": "Supports fat loss via steady-state effort." } } ],
-  "meals": { "daily_calories": 2100, "macros": { "protein_g": 160, "carbs_g": 180, "fats_g": 70 } },
-  "summary": { "goal": "Fat Loss", "style": "Push/Pull/Legs", "days_per_week": 5, "volume_type": "Low volume, high intensity", "equipment_used": ["Dumbbells", "Resistance Bands"], "adjustments": ["Avoid deep lunges due to mild knee discomfort"], "user_profile": { "sex": "Male", "weight_kg": 82 } }
+  "plan": [
+    {
+      "day": "Day 1",
+      "focus": "Pull (Back, Biceps)",
+      "exercises": [
+        {
+          "name": "Dumbbell Bent-Over Row",
+          "sets": 3,
+          "reps": 10,
+          "rest_seconds": 60,
+          "notes": "Use moderate weight. Avoid jerking motion.",
+          "youtube_search_query": "how to do dumbbell bent over row",
+          "instructions": [
+            "Hinge at your hips, keeping your back straight.",
+            "Pull the dumbbells towards your lower chest.",
+            "Squeeze your back muscles at the top."
+          ]
+        }
+        // Repeat similar objects for other exercises
+      ],
+      "cardio": {
+        "type": "MISS – Incline Walk",
+        "duration_minutes": 30,
+        "intensity": "Moderate (RPE 6/10)",
+        "timing": "Post-weight training",
+        "notes": "Supports fat loss via steady-state effort."
+      }
+    }
+    // Repeat for each training day
+  ],
+  "meals": {
+    "daily_calories": 2100,
+    "macros": {
+      "protein_g": 160,
+      "carbs_g": 180,
+      "fats_g": 70
+    }
+  },
+  "summary": {
+    "goal": "Fat Loss",
+    "style": "Push/Pull/Legs",
+    "days_per_week": 5,
+    "volume_type": "Low volume, high intensity",
+    "equipment_used": ["Dumbbells", "Resistance Bands"],
+    "adjustments": ["Avoid deep lunges due to mild knee discomfort"],
+    "user_profile": {
+      "sex": "Male",
+      "age": 28,
+      "weight_kg": 82,
+      "height_cm": 178
+    }
+  }
 }
 -------------------
 
 ✅ LOGIC RULES:
-1.  **Workout Plan:** For each exercise, you MUST include "name", "sets", "reps", "rest_seconds", "notes", a "youtube_search_query", and a detailed "instructions" array with at least 3 steps. Match the training style and goal with appropriate exercises. Prioritize compound lifts. Only use available "equipment". Respect injury "notes".
-2.  **Nutrition logic:** Use **Mifflin-St Jeor formula** as a base for daily calories. Set macros as: **Protein**: 1.8–2.2g/kg for fat loss, 2–2.5g/kg for muscle gain; **Fats**: 25–30% total calories; **Carbs**: Remaining cals.
-3.  Return **only valid JSON**, no explanations, markdown, or commentary.
 
--------------------
+1. **Workout Plan**:
+   - Match `days_per_week` and `style` (e.g., Push/Pull/Legs).
+   - Each exercise must include: `"name"`, `"sets"`, `"reps"`, `"rest_seconds"`, `"notes"`, `"youtube_search_query"`, and `"instructions"` (minimum 3 clear steps).
+   - Use only available equipment.
+   - Respect injuries: e.g., knee discomfort → avoid deep lunges, jump squats, high box steps.
+   - Do not repeat the same exercises within the same week.
 
-✅ INPUT VARIABLES TO BE INJECTED:
-- sex: "${data.gender}"
-- weight_kg: ${data.weight}
-- height_cm: ${data.height}
-- age: 28
-- days_per_week: ${data.days}
-- goal: "${data.goal}"
-- equipment: ["${data.equipment}"]
-- style: "${data.style || 'Not specified, choose best fit'}"
-- notes: "${data.limitations || 'None'}"
+2. **Cardio**:
+   - For fat loss: 20–40 min MISS or 10–20 min HIIT after weights.
+   - For muscle gain: optional 15–30 min low-intensity cardio.
+   - Include type, RPE, and timing per day.
+
+3. **Nutrition (Calories + Macros only)**:
+   - Use **Mifflin-St Jeor formula**:
+     \`10 × weight_kg + 6.25 × height_cm − 5 × age + 5 (male)\`
+     Multiply by 1.5 for active individuals.
+   - Macros:
+     - Protein = 1.8–2.2 g/kg (fat loss), 2–2.5 g/kg (muscle gain)
+     - Fat = 25–30% of total calories
+     - Carbs = Remaining calories ÷ 4
+
+4. **Additional Notes Handling**:
+   - If "short on time" → limit midweek sessions to ≤35 minutes
+   - If "morning preference" → minimal warm-up, no AM cardio before weights
+   - Convert all user limitations into `"adjustments"` in summary
+
+5. **Final Output**:
+   - Valid JSON only — no extra text, markdown, or comments
+   - No supplements or food suggestions
 `;
+
 
                 let resultText = await callGeminiAPI(prompt);
                 const startIndex = resultText.indexOf('{');
