--- a/index.html
+++ b/index.html
@@ -516,12 +516,10 @@
             manualSmoothScroll(planOutputSection);
 
             try {
-              const prompt = `
+                const prompt = `
 You are a certified strength and conditioning coach, clinical exercise physiologist, and precision nutrition expert.
 
-Your job is to return a fully customized **weekly training and nutrition plan**, based on the user's goal, schedule, equipment, and physical profile.
-
-The output must be **strictly valid JSON** — no markdown, headers, or explanation. Return only one JSON object.
+Your job is to return a fully customized **weekly training and meal plan**, built around the user's input. The response must be **strictly formatted** as a valid JSON object. No markdown, no text, no headers — only JSON.
 
 -------------------
 ✅ JSON STRUCTURE (Strictly Follow):
@@ -544,7 +542,6 @@ The output must be **strictly valid JSON** — no markdown, headers, or explanat
             "Squeeze your back muscles at the top."
           ]
         }
-        // Repeat similar objects for other exercises
       ],
       "cardio": {
         "type": "MISS – Incline Walk",
@@ -554,7 +551,6 @@ The output must be **strictly valid JSON** — no markdown, headers, or explanat
         "notes": "Supports fat loss via steady-state effort."
       }
     }
-    // Repeat for each training day
   ],
   "meals": {
     "daily_calories": 2100,
@@ -582,37 +578,49 @@ The output must be **strictly valid JSON** — no markdown, headers, or explanat
 -------------------
 
 ✅ LOGIC RULES:
+1. Each exercise must include: "name", "sets", "reps", "rest_seconds", "notes", "youtube_search_query", and "instructions" (minimum 3 clear steps).
+2. Match plan structure to user goal and training style.
+   - Fat Loss → 6–10 reps, short rests (45–90 sec), cardio post-training (MISS or HIIT)
+   - Muscle Gain → 6–8 reps, 3–5 sets, 75–90% 1RM, optional walking
+   - Strength → 3–5 reps, long rest (2–4 min)
+3. Always prioritize compound movements at the start of each workout.
+4. Only use exercises compatible with available equipment.
+5. Do not repeat the same exercises in the same week.
+6. Match rest_seconds to rep scheme:
+   - 3–5 reps → 120–180 sec
+   - 6–10 reps → 60–90 sec
+   - 12+ reps → 30–45 sec
+7. Cardio logic:
+   - Fat Loss → 20–40 min MISS or 10–20 min HIIT (post-weight)
+   - Muscle Gain → 15–30 min light walking (optional)
+   - Include cardio type, timing, duration, and RPE/notes
+8. Mifflin-St Jeor for calories: 
+   \`10 × weight_kg + 6.25 × height_cm − 5 × age + 5 (male)\`
+   Multiply by 1.5 activity factor.
+9. Macronutrient targets:
+   - Protein: 1.8–2.2g/kg (fat loss), 2–2.5g/kg (muscle gain)
+   - Fats: 25–30% of total calories
+   - Carbs: remainder (calories − protein×4 − fat×9) ÷ 4
+10. If notes include:
+   - "knee issues" → avoid lunges, jump squats, deep squats
+   - "short on time" → limit midweek sessions to ≤35 min
+   - "morning sessions" → minimize warm-up, avoid fasted cardio
+11. Return **only valid JSON** — no commentary, text, or markdown.
 
-1. **Workout Plan**:
-   - Match `days_per_week` and `style` (e.g., Push/Pull/Legs).
-   - Each exercise must include: `"name"`, `"sets"`, `"reps"`, `"rest_seconds"`, `"notes"`, `"youtube_search_query"`, and `"instructions"` (minimum 3 clear steps).
-   - Use only available equipment.
-   - Respect injuries: e.g., knee discomfort → avoid deep lunges, jump squats, high box steps.
-   - Do not repeat the same exercises within the same week.
+-------------------
 
-2. **Cardio**:
-   - For fat loss: 20–40 min MISS or 10–20 min HIIT after weights.
-   - For muscle gain: optional 15–30 min low-intensity cardio.
-   - Include type, RPE, and timing per day.
-
-3. **Nutrition (Calories + Macros only)**:
-   - Use **Mifflin-St Jeor formula**:
-     \`10 × weight_kg + 6.25 × height_cm − 5 × age + 5 (male)\`
-     Multiply by 1.5 for active individuals.
-   - Macros:
-     - Protein = 1.8–2.2 g/kg (fat loss), 2–2.5 g/kg (muscle gain)
-     - Fat = 25–30% of total calories
-     - Carbs = Remaining calories ÷ 4
-
-4. **Additional Notes Handling**:
-   - If "short on time" → limit midweek sessions to ≤35 minutes
-   - If "morning preference" → minimal warm-up, no AM cardio before weights
-   - Convert all user limitations into `"adjustments"` in summary
-
-5. **Final Output**:
-   - Valid JSON only — no extra text, markdown, or comments
-   - No supplements or food suggestions
+✅ INPUT VARIABLES TO BE INJECTED:
+- sex: \${JSON.stringify(data.gender)}
+- weight_kg: \${data.weight}
+- height_cm: \${data.height}
+- age: 28
+- days_per_week: \${data.days}
+- goal: \${JSON.stringify(data.goal)}
+- equipment: [\${data.equipment.map(eq => JSON.stringify(eq)).join(", ")}]
+- style: \${JSON.stringify(data.style || 'Not specified, choose best fit')}
+- notes: \${JSON.stringify(data.limitations || 'None')}
 `;
+
 
 
                 let resultText = await callGeminiAPI(prompt);
