--- a/index.html
+++ b/index.html
@@ -132,6 +132,30 @@
             transform: scale(0.95);
         }
     </style>
+
+        <!-- Preconnect to speed up font loading -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+
+    <!-- Theme color for Android Chrome -->
+    <meta name="theme-color" content="#0a0a0a">
+
+    <!-- JSON‑LD WebApplication schema for richer SEO -->
+    <script type="application/ld+json">
+    {
+      "@context": "https://schema.org",
+      "@type": "WebApplication",
+      "name": "GymPlan.fit",
+      "url": "https://gymplan.fit",
+      "description": "AI‑Powered Custom Workout Plan Generator. Stop guessing in the gym and get a personalized plan in seconds, tailored to your goals, schedule, and equipment.",
+      "applicationCategory": "FitnessApplication",
+      "operatingSystem": "All",
+      "browserRequirements": "Requires JavaScript"
+    }
+    </script>
+
+    
+
 </head>
 <body class="antialiased">
 
